2016-04-02  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to version 2016-04-02.
	* config.sub: Update to version 2016-03-30.

2016-04-02  Rob Savoye  <rob.savoye@linaro.org>

	* contrib/sum2junit.sh: New.

2016-04-01  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (connprocs): Document new SSH procs.

2016-03-31  Rob Savoye  <rob.savoye@linaro.org>

	* lib/ssh.exp: New.
	* NEWS: Update.

2016-03-30  Ben Elliston  <bje@gnu.org>

	* baseboards/mcore-moto-sim.exp, lib/dejagnu.exp, lib/dg.exp,
	lib/dmucs.exp, lib/framework.exp, lib/remote.exp, lib/target.exp,
	runtest.exp: Fix spelling errors in comments.

2016-03-30  Ben Elliston  <bje@gnu.org>

	* lib/remote.exp (remote_expect): Use perror not send_user.

2016-03-29  Ben Elliston  <bje@gnu.org>

	* lib/remote.exp (remote_expect): Fix spelling error.

2016-03-29  Rob Savoye  <rob.savoye@linaro.org>

	* runtest.exp: Only print "searching for <test name>" message at
	verbose level >= 2 -- too much noise.

2016-03-29  Ben Elliston  <bje@gnu.org>

	* texinfo.tex: Update to latest master version.
	* INSTALL: Likewise.

2016-03-29  Ben Elliston  <bje@gnu.org>

	* runtest.exp: More fixes identified by the Frink static analyser.
	* lib/dg.exp: Likewise.
	* config/adb.exp: Likewise.
	* config/vxworks.exp: Likewise.
	* baseboards/androideabi.exp: Likewise.
	* baseboards/basic-sid.exp: Likewise.
	* baseboards/multi-sim.exp: Likewise.

2016-03-28  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* dg.exp (dg-do): Do not change the previously selected action if
	a de-selected dg-do is encountered.

2016-03-28  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (check_xml): Remove unused proc.

2016-03-28  Rob Savoye  <rob.savoye@linaro.org>

	* lib/dmucs.exp: New.

2016-03-28  Rob Savoye  <rob.savoye@linaro.org>

	* lib/libgloss.exp (find_g++): Look for xgcc++ to use the freshly
	built compiler, then look in the path.

2016-03-28  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (which): Don't exclude symbolic links--Debian's